[ios] Improves ReadingList header insert/delete animation

- Changes ReadingListTableVC section rowAnimation to
UITableViewRowAnimationMiddle and UITableViewRowAnimationFade.

- Constraints were breaking while animating, this because of a
known bug that was fixed in other headers (crbug.com/854117).
In order to fix this all the padding constraints priority was
lowered.

Video:
https://drive.google.com/open?id=1jf1n56P4apUCHjC6ZqZlLe0mCEORsIzG

Bug: 868228
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: I5580fe7377f16070fc43b1bc283754d4b00d60ef
Reviewed-on: https://chromium-review.googlesource.com/1155923
Commit-Queue: Sergio Collazos <sczs@chromium.org>
Reviewed-by: Kurt Horimoto <kkhorimoto@chromium.org>
Reviewed-by: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#579479}
Former-commit-id: eb5e1734c257ce47c84cdda7ed8c5b9ba126f622