ios/chrome/browser/ui/reading_list/reading_list_table_view_controller.mm
@@ -392,7 +392,7 @@ ReadingListSelectionState GetSelectionStateForSelectedCounts(
     NSInteger sectionIndex =
         [model sectionForSectionIdentifier:SectionIdentifierRead];
     [tableView deleteSections:[NSIndexSet indexSetWithIndex:sectionIndex]
-             withRowAnimation:UITableViewRowAnimationAutomatic];
+             withRowAnimation:UITableViewRowAnimationMiddle];
     [model removeSectionWithIdentifier:SectionIdentifierRead];
   };
   void (^completion)(BOOL) = ^(BOOL) {
@@ -693,7 +693,7 @@ ReadingListSelectionState GetSelectionStateForSelectedCounts(
     [model setHeader:[self headerForSection:sectionID]
         forSectionWithIdentifier:sectionID];
     [self.tableView insertSections:[NSIndexSet indexSetWithIndex:sectionIndex]
-                  withRowAnimation:UITableViewRowAnimationAutomatic];
+                  withRowAnimation:UITableViewRowAnimationMiddle];
   };
   [self performBatchTableViewUpdates:updates completion:nil];
 
@@ -811,7 +811,7 @@ ReadingListSelectionState GetSelectionStateForSelectedCounts(
         // view.
         NSInteger sectionIndex = [model sectionForSectionIdentifier:section];
         [tableView deleteSections:[NSIndexSet indexSetWithIndex:sectionIndex]
-                 withRowAnimation:UITableViewRowAnimationAutomatic];
+                 withRowAnimation:UITableViewRowAnimationFade];
         [model removeSectionWithIdentifier:section];
       }
     }
